Refactored to-do with no duplicated code

--- a/js_11_TO-DO_DOM/src/input.css
+++ b/js_11_TO-DO_DOM/src/input.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+@keyframes fadeOut {
+  from {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.animation-fadeInOut {
+  animation: fadeOut 0.25s ease-in-out;
+}
